--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <ul>
 
             <!-- Slide 1 -->
-            <li data-transition="slotzoom-horizontal" data-slotamount="7" data-masterspeed="1000" data-fsmasterspeed="1000">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="1000" data-fsmasterspeed="1000">
 
               <!-- Main image-->
               <img src="images/slider/slide1.jpg" data-bgparallax="5"  alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
@@ -283,13 +283,13 @@
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600;">
-                  <a href="#project6" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="#project1" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
 
             <!-- Slide 2 -->
-            <li data-transition="slotzoom-horizontal" data-slotamount="7" data-masterspeed="1000" data-fsmasterspeed="1000">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="1000" data-fsmasterspeed="1000">
 
               <!-- Main image-->
               <img src="images/slider/slide2.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
@@ -384,7 +384,7 @@
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">O Luxo da<br> Madeira Engenheirada<br> F:Poles
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">A sofisticação da<br> Madeira Engenheirada<br> F:Poles
               </div>
 
 
@@ -428,13 +428,13 @@
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600;">
-                  <a href="#project7" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="#project2" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
 
             <!-- Slide 3 -->
-            <li data-transition="slotzoom-horizontal" data-slotamount="7" data-masterspeed="1000" data-fsmasterspeed="1000">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="1000" data-fsmasterspeed="1000">
 
               <!-- Main image-->
               <img src="images/slider/slide3.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
@@ -529,7 +529,7 @@
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">A Simpliciidade<br>Do Design Escnadinavo<br>F:Poles
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Skan Hous 2.0<br>Praticidade, Velocidade e <br>Qualidade
               </div>
 
 
@@ -573,7 +573,7 @@
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600; ">
-                  <a href="#project4" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="#project3" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
@@ -770,32 +770,32 @@
           <div class="row">
             <div class="col-lg-8"><img alt="" class="project-detail-img" src="images/projects/1-680x680.jpg"></div>
             <div class="col-lg-4">
-              <h3 class="project-detail-title">Triangle Concrete House On Lake</h3>
-              <p class="project-detail-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut. magna aliquam erat volutpat enim ad minim veniam. Duis autem vel eum iriure dolor in hendrerit in.</p>
+              <h3 class="project-detail-title">Skan Hous 1.0 - Pinheirinho Itu</h3>
+              <p class="project-detail-text">Construida em um terreno de 20.000 m2 cercada por uma natureza exuberante, este projeto Modular da Arquiteta Alessandra Pretti de 350 m2 foi erquido em menos de 7 meses.</p>
               <ul class="project-detail-list text-dark">
                 <li>
-                  <span class="left">Clients:</span>
-                  <span class="right">Ethan Hunt, John Doe</span>
+                  <span class="left">Clientes:</span>
+                  <span class="right">Pedro e Bianca</span>
                 </li>
                 <li>
-                  <span class="left">Completion:</span>
-                  <span class="right">February 5th, 2019</span>
+                  <span class="left">Entrega</span>
+                  <span class="right">Setembro 2023</span>
                 </li>
                 <li>
-                  <span class="left">Project Type:</span>
-                  <span class="right">Villa, Residence</span>
+                  <span class="left">Tipo de Projeto:</span>
+                  <span class="right">Residencia Modular</span>
                 </li>
                 <li>
-                  <span class="left">Architects:</span>
-                  <span class="right">Logan Cee, Paul</span>
+                  <span class="left">Architeta:</span>
+                  <span class="right">Alessandra Pretti</span>
                 </li>
                 <li>
-                  <span class="left">Budget:</span>
-                  <span class="right">$1 200 000</span>
+                  <span class="left">Orçamento:</span>
+                  <span class="right">R$ 2.600.000,00</span>
                 </li>
               </ul>
               <div class="project-detail-meta">
-                <span class="left text-dark hidden-xs pull-sm-left">Share:</span>
+                <span class="left text-dark hidden-xs pull-sm-left">Compartilhar:</span>
                 <div class="social-list pull-sm-right">
                   <a href="" class="icon ion-social-twitter"></a>
                   <a href="" class="icon ion-social-facebook"></a>
@@ -813,32 +813,32 @@
           <div class="row">
             <div class="col-lg-8"><img alt="" class="project-detail-img" src="images/projects/2-680x680.jpg"></div>
             <div class="col-lg-4">
-              <h3 class="project-detail-title">Rectangular House Near Italy</h3>
-              <p class="project-detail-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut. magna aliquam erat volutpat enim ad minim veniam. Duis autem vel eum iriure dolor in hendrerit in.</p>
+              <h3 class="project-detail-title">Skan Hous Woodframe by F:Poles</h3>
+              <p class="project-detail-text">Este projeto foi desenvolvido pelo escitório do Arquiteto Fernando Poles para o Lago Azul em Sorocaba. Um projeto modular de alto padrão para lotes de mil a dois mil metros quadrados.</p>
               <ul class="project-detail-list text-dark">
                 <li>
-                  <span class="left">Clients:</span>
-                  <span class="right">Ethan Hunt, John Doe</span>
+                  <span class="left">Cliente:</span>
+                  <span class="right">Skan Hous</span>
                 </li>
                 <li>
-                  <span class="left">Completion:</span>
-                  <span class="right">February 5th, 2019</span>
+                  <span class="left">Disponibilidade:</span>
+                  <span class="right">1º Trimestre 2025.</span>
                 </li>
                 <li>
-                  <span class="left">Project Type:</span>
-                  <span class="right">Villa, Residence</span>
+                  <span class="left">Tipo de Projeto:</span>
+                  <span class="right">Residencial Alto Padrão</span>
                 </li>
                 <li>
-                  <span class="left">Architects:</span>
-                  <span class="right">Logan Cee, Paul</span>
+                  <span class="left">Arquitetura:</span>
+                  <span class="right">F:Poles</span>
                 </li>
                 <li>
-                  <span class="left">Budget:</span>
-                  <span class="right">$1 200 000</span>
+                  <span class="left">Orçamento:</span>
+                  <span class="right">Consultar</span>
                 </li>
               </ul>
               <div class="project-detail-meta">
-                <span class="left text-dark hidden-xs pull-sm-left">Share:</span>
+                <span class="left text-dark hidden-xs pull-sm-left">Compartilhe:</span>
                 <div class="social-list pull-sm-right">
                   <a href="" class="icon ion-social-twitter"></a>
                   <a href="" class="icon ion-social-facebook"></a>
@@ -856,32 +856,32 @@
           <div class="row">
             <div class="col-lg-8"><img alt="" class="project-detail-img" src="images/projects/3-680x680.jpg"></div>
             <div class="col-lg-4">
-              <h3 class="project-detail-title">Milko Co-Working Building</h3>
-              <p class="project-detail-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut. magna aliquam erat volutpat enim ad minim veniam. Duis autem vel eum iriure dolor in hendrerit in.</p>
+              <h3 class="project-detail-title">Skan Hous 2.0 Alessandra Pretti</h3>
+              <p class="project-detail-text">Um novo projeto do escritório Elevare, a versão 2.0 representa um avanço em conforto, segurança e materiais utilizados. Praticidade e segurança aliada a acabamentos de qualidade.</p>
               <ul class="project-detail-list text-dark">
                 <li>
-                  <span class="left">Clients:</span>
-                  <span class="right">Ethan Hunt, John Doe</span>
+                  <span class="left">Cliente:</span>
+                  <span class="right">Skan Hous</span>
                 </li>
                 <li>
-                  <span class="left">Completion:</span>
-                  <span class="right">February 5th, 2019</span>
+                  <span class="left">Disponibilidade:</span>
+                  <span class="right">Novembro de 2025</span>
                 </li>
                 <li>
-                  <span class="left">Project Type:</span>
-                  <span class="right">Villa, Residence</span>
+                  <span class="left">Tipo de Projeto:</span>
+                  <span class="right">Residencial e Comercial</span>
                 </li>
                 <li>
-                  <span class="left">Architects:</span>
-                  <span class="right">Logan Cee, Paul</span>
+                  <span class="left">Arquitetura:</span>
+                  <span class="right">Estudio Elevare</span>
                 </li>
                 <li>
-                  <span class="left">Budget:</span>
-                  <span class="right">$1 200 000</span>
+                  <span class="left">Valores:</span>
+                  <span class="right">Sob consulta</span>
                 </li>
               </ul>
               <div class="project-detail-meta">
-                <span class="left text-dark hidden-xs pull-sm-left">Share:</span>
+                <span class="left text-dark hidden-xs pull-sm-left">Compartilhe:</span>
                 <div class="social-list pull-sm-right">
                   <a href="" class="icon ion-social-twitter"></a>
                   <a href="" class="icon ion-social-facebook"></a>
