--- a/index.html
+++ b/index.html
@@ -179,7 +179,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-paddingright="[0,0,0,0]"
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
-
                 style="background-color:#ffce04;"> </div>
 
               <!-- Layer 2 -->
@@ -779,48 +778,107 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </a>
         </div>
 
-        <!-- Project Modal Dialog 1 -->
-        <div id="project1" class="container zoom-anim-dialog mfp-hide">
-          <div class="row">
-            <div class="col-lg-8"><img alt="" class="project-detail-img" src="images/projects/1-680x680.jpg"></div>
-            <div class="col-lg-4">
-              <h3 class="project-detail-title">Skan Hous 1.0 - Pinheirinho Itu</h3>
-              <p class="project-detail-text">Construida em um terreno de 20.000 m2 cercada por uma natureza exuberante, este projeto Modular da Arquiteta Alessandra Pretti de 350 m2 foi erquido em menos de 7 meses.</p>
-              <ul class="project-detail-list text-dark">
-                <li>
-                  <span class="left">Clientes:</span>
-                  <span class="right">Pedro e Bianca</span>
-                </li>
-                <li>
-                  <span class="left">Entrega</span>
-                  <span class="right">Setembro 2023</span>
-                </li>
-                <li>
-                  <span class="left">Tipo de Projeto:</span>
-                  <span class="right">Residencia Modular</span>
-                </li>
-                <li>
-                  <span class="left">Architeta:</span>
-                  <span class="right">Alessandra Pretti</span>
-                </li>
-                <li>
-                  <span class="left">Orçamento:</span>
-                  <span class="right">R$ 2.600.000,00</span>
-                </li>
-              </ul>
-              <div class="project-detail-meta">
-                <span class="left text-dark hidden-xs pull-sm-left">Compartilhar:</span>
-                <div class="social-list pull-sm-right">
-                  <a href="" class="icon ion-social-twitter"></a>
-                  <a href="" class="icon ion-social-facebook"></a>
-                  <a href="" class="icon ion-social-googleplus"></a>
-                  <a href="" class="icon ion-social-linkedin"></a>
-                  <a href="" class="icon ion-social-dribbble-outline"></a>
-                </div>
-              </div>
-            </div>
-          </div>
+<!-- Project Modal Dialog 1 -->
+<div id="project1" class="container zoom-anim-dialog mfp-hide">
+  <div class="row">
+    <div class="col-lg-8">
+      <!-- Main Image Display -->
+      <div class="main-image-container">
+        <img id="mainImage" src="images/projects/1-960x540.jpg" alt="Project Image" class="img-fluid">
+      </div>
+      <!-- Thumbnails -->
+      <div class="thumbnail-container d-flex justify-content-center mt-3">
+        <img onclick="changeImage('images/projects/1-960x540.jpg')" src="images/projects/1-960x540.jpg" class="img-thumbnail" alt="Thumbnail 1">
+        <img onclick="changeImage('images/projects/2-960x540.jpg')" src="images/projects/2-960x540.jpg" class="img-thumbnail" alt="Thumbnail 2">
+        <img onclick="changeImage('images/projects/3-960x540.jpg')" src="images/projects/3-960x540.jpg" class="img-thumbnail" alt="Thumbnail 3">
+        <img onclick="changeImage('images/projects/4-960x540.jpg')" src="images/projects/4-960x540.jpg" class="img-thumbnail" alt="Thumbnail 4">
+        <img onclick="changeImage('images/projects/5-960x540.jpg')" src="images/projects/5-960x540.jpg" class="img-thumbnail" alt="Thumbnail 5">
+        <img onclick="changeImage('images/projects/6-960x540.jpg')" src="images/projects/6-960x540.jpg" class="img-thumbnail" alt="Thumbnail 6">
+        <img onclick="changeImage('images/projects/7-960x540.jpg')" src="images/projects/7-960x540.jpg" class="img-thumbnail" alt="Thumbnail 7">
+        <img onclick="changeImage('images/projects/8-960x540.jpg')" src="images/projects/8-960x540.jpg" class="img-thumbnail" alt="Thumbnail 8">
+        <img onclick="changeImage('images/projects/9-960x540.jpg')" src="images/projects/9-960x540.jpg" class="img-thumbnail" alt="Thumbnail 9">
+        <img onclick="changeImage('images/projects/10-960x540.jpg')" src="images/projects/10-960x540.jpg" class="img-thumbnail" alt="Thumbnail 10">
+        <img onclick="changeImage('images/projects/11-960x540.jpg')" src="images/projects/11-960x540.jpg" class="img-thumbnail" alt="Thumbnail 11">
+        <img onclick="changeImage('images/projects/12-960x540.jpg')" src="images/projects/12-960x540.jpg" class="img-thumbnail" alt="Thumbnail 12">
+        <img onclick="changeImage('images/projects/13-960x540.jpg')" src="images/projects/13-960x540.jpg" class="img-thumbnail" alt="Thumbnail 13">
+        <img onclick="changeImage('images/projects/14-960x540.jpg')" src="images/projects/14-960x540.jpg" class="img-thumbnail" alt="Thumbnail 14">
+        <img onclick="changeImage('images/projects/15-960x540.jpg')" src="images/projects/15-960x540.jpg" class="img-thumbnail" alt="Thumbnail 15">
+        <img onclick="changeImage('images/projects/16-960x540.jpg')" src="images/projects/16-960x540.jpg" class="img-thumbnail" alt="Thumbnail 16">
+        <img onclick="changeImage('images/projects/17-960x540.jpg')" src="images/projects/17-960x540.jpg" class="img-thumbnail" alt="Thumbnail 17">
+        <img onclick="changeImage('images/projects/18-960x540.jpg')" src="images/projects/18-960x540.jpg" class="img-thumbnail" alt="Thumbnail 18">
+        <img onclick="changeImage('images/projects/19-960x540.jpg')" src="images/projects/19-960x540.jpg" class="img-thumbnail" alt="Thumbnail 19">
+        <img onclick="changeImage('images/projects/20-960x540.jpg')" src="images/projects/20-960x540.jpg" class="img-thumbnail" alt="Thumbnail 20">
+        <img onclick="changeImage('images/projects/21-960x540.jpg')" src="images/projects/21-960x540.jpg" class="img-thumbnail" alt="Thumbnail 21">
+        <img onclick="changeImage('images/projects/22-960x540.jpg')" src="images/projects/22-960x540.jpg" class="img-thumbnail" alt="Thumbnail 22">
+        <img onclick="changeImage('images/projects/23-960x540.jpg')" src="images/projects/23-960x540.jpg" class="img-thumbnail" alt="Thumbnail 23">
+        <img onclick="changeImage('images/projects/24-960x540.jpg')" src="images/projects/24-960x540.jpg" class="img-thumbnail" alt="Thumbnail 24">
+        <img onclick="changeImage('images/projects/25-960x540.jpg')" src="images/projects/25-960x540.jpg" class="img-thumbnail" alt="Thumbnail 25">
+        <img onclick="changeImage('images/projects/26-960x540.jpg')" src="images/projects/26-960x540.jpg" class="img-thumbnail" alt="Thumbnail 26">
+        <img onclick="changeImage('images/projects/27-960x540.jpg')" src="images/projects/27-960x540.jpg" class="img-thumbnail" alt="Thumbnail 27">
+        <img onclick="changeImage('images/projects/28-960x540.jpg')" src="images/projects/28-960x540.jpg" class="img-thumbnail" alt="Thumbnail 28">
+        <img onclick="changeImage('images/projects/29-960x540.jpg')" src="images/projects/29-960x540.jpg" class="img-thumbnail" alt="Thumbnail 29">
+        <img onclick="changeImage('images/projects/30-960x540.jpg')" src="images/projects/30-960x540.jpg" class="img-thumbnail" alt="Thumbnail 30">
+        <img onclick="changeImage('images/projects/31-960x540.jpg')" src="images/projects/31-960x540.jpg" class="img-thumbnail" alt="Thumbnail 31">
+        <img onclick="changeImage('images/projects/32-960x540.jpg')" src="images/projects/32-960x540.jpg" class="img-thumbnail" alt="Thumbnail 32">
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <h3 class="project-detail-title">Skan Hous 1.0 - Pinheirinho Itu</h3>
+      <p class="project-detail-text">Construída em um terreno de 20.000 m² cercada por uma natureza exuberante, este projeto modular da Arquiteta Alessandra Pretti de 350 m² foi erguido em menos de 7 meses.</p>
+      <ul class="project-detail-list text-dark">
+        <li><span class="left">Clientes:</span><span class="right">Pedro e Bianca</span></li>
+        <li><span class="left">Entrega:</span><span class="right">Setembro 2023</span></li>
+        <li><span class="left">Tipo de Projeto:</span><span class="right">Residência Modular</span></li>
+        <li><span class="left">Arquiteta:</span><span class="right">Alessandra Pretti</span></li>
+        <li><span class="left">Orçamento:</span><span class="right">R$ 2.600.000,00</span></li>
+      </ul>
+      <div class="project-detail-meta">
+        <span class="left text-dark hidden-xs pull-sm-left">Compartilhar:</span>
+        <div class="social-list pull-sm-right">
+          <a href="#" class="icon ion-social-twitter"></a>
+          <a href="#" class="icon ion-social-facebook"></a>
+          <a href="#" class="icon ion-social-googleplus"></a>
+          <a href="#" class="icon ion-social-linkedin"></a>
+          <a href="#" class="icon ion-social-dribbble-outline"></a>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- CSS for Responsiveness and Styling -->
+<style>
+  .main-image-container img {
+    width: 100%;
+    max-width: 960px;
+    height: auto;
+    border-radius: 8px;
+  }
+  
+  .thumbnail-container {
+    gap: 8px;
+  }
+
+  .thumbnail-container .img-thumbnail {
+    width: 80px;
+    height: auto;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+
+  @media (max-width: 576px) {
+    .thumbnail-container .img-thumbnail {
+      width: 60px;
+    }
+  }
+</style>
+
+<!-- JavaScript for Image Switching -->
+<script>
+  function changeImage(src) {
+    document.getElementById('mainImage').src = src;
+  }
+</script>
 
         <!-- Project Modal Dialog 2 -->
         <div id="project2" class="container zoom-anim-dialog mfp-hide">
